--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,55 @@
-#key {
-    cursor: pointer;
-    background: red;
-    border-radius: 100%;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    --borders-static: black;
+    --background: rgba(0, 0, 0, 0.452);;
+    --key: white;
+    --name: yellow;
+    --border-transform: yellow;
+    --lg: 20px;
+    --md: 18px;
+    --sm: 16px;
+}
+
+body {
+    font-family: sans-serif;
+}
+
+.container {
+    max-width: 1393px;
+    min-width: 100vw;
+    max-height: 2098px;
+    min-height: 100vh;
+    background: url(../images/background.jpg) bottom center;
+    background-size: cover;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: center;
+    gap: 15px;
+}
+
+.container .instrument {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    flex-flow: column wrap;
+    place-content: center;
+    background: var(--background);
+    border: 2px solid var(--borders-static);
+    user-select: none;
+
+}
+
+.container .instrument p:first-child {
+    color: var(--key);
+    text-align: center;
+    font-size: var(--lg);
+    font-weight: 500;
+}
+
+.container .instrument p:last-child {
+    color: var(--name);
+    font-size: var(--sm);
 }
